Modified CMake files and source and header files so stockAggregatesStore compiles.

--- a/c++/sqlUtils/CMakeLists.txt
+++ b/c++/sqlUtils/CMakeLists.txt
@@ -1,3 +1,14 @@
-file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
-add_library(SqlQueryBuilder ${sources})
-target_include_directories(SqlQueryBuilder PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+cmake_minimum_required(VERSION 3.30.6)
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+project(SqlQueryBuilder)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories("/usr/local/include")
+
+file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+add_library(sqlQueryBuilder STATIC ${SOURCES})
+
+target_include_directories(sqlQueryBuilder PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
