Added test case.

--- a/c++/stockAlgorithms/CMakeLists.txt
+++ b/c++/stockAlgorithms/CMakeLists.txt
@@ -11,4 +11,8 @@ include_directories("usr/local/include")
 file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 add_executable(stockAlgorithms ${SOURCES})
 
+file(GLOB TEST "${CMAKE_CURRENT_SOURCE_DIR}/test/src/Test.cpp")
+file(GLOB DICKY_FULLER "${CMAKE_CURRENT_SOURCE_DIR}/src/DickyFuller.cpp")
+add_executable(stockAlgorithmsTest ${TEST} ${DICKY_FULLER})
+
 target_include_directories(stockAlgorithms PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
