--- a/javascript/package.json
+++ b/javascript/package.json
@@ -14,9 +14,14 @@
   "description": "",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.25.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
     "globals": "^15.14.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.0",
+    "superagent": "^10.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
