Added grpc to loadBalancer for StockAggregatesStore endpoints.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+c++/loadBalancer/build
 c++/sqlUtils/build
 c++/stockAggregatesStore/build
-c++/Crow
 javascript/node_modules
 python/populateDatabase/__pycache__
 python/populateDatabase/.env
