--- a/c++/stockAlgorithms/CMakeLists.txt
+++ b/c++/stockAlgorithms/CMakeLists.txt
@@ -5,6 +5,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(StockAlgorithms)
 
+find_package(Protobuf CONFIG REQUIRED)
+find_package(gRPC CONFIG REQUIRED)
+
+add_library(protolib "${CMAKE_CURRENT_SOURCE_DIR}/proto/StockAlgorithmsService.proto")
+target_link_libraries(protolib gRPC::grpc++)
+target_include_directories(protolib PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+protobuf_generate(TARGET protolib LANGUAGE cpp)
+
+protobuf_generate(TARGET protolib LANGUAGE grpc 
+GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc
+PLUGIN "protoc-gen-grpc=/usr/local/bin/grpc_cpp_plugin")
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories("usr/local/include")
 
@@ -15,4 +27,4 @@ file(GLOB TEST "${CMAKE_CURRENT_SOURCE_DIR}/test/src/Test.cpp")
 file(GLOB DICKY_FULLER "${CMAKE_CURRENT_SOURCE_DIR}/src/DickyFuller.cpp")
 add_executable(stockAlgorithmsTest ${TEST} ${DICKY_FULLER})
 
-target_include_directories(stockAlgorithms PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(stockAlgorithms protolib)
