Modified dockerfile and endpoint to drastically improve performance.

--- a/c++/stockAlgorithms/Dockerfile
+++ b/c++/stockAlgorithms/Dockerfile
@@ -15,7 +15,19 @@ RUN git clone --recurse-submodules -b v1.57.0 https://github.com/grpc/grpc && \
     cd grpc && \
     mkdir cmake/build && \
     cd cmake/build && \
-    cmake -DCMAKE_INSTALL_PREFIX=/usr/local ../.. && \
+    cmake \
+        -DCMAKE_INSTALL_PREFIX=/usr/local \
+        -DgRPC_INSTALL=ON \
+        -DgRPC_BUILD_TESTS=OFF \
+        -DgRPC_BUILD_CSHARP_EXT=OFF \
+        -DgRPC_BUILD_GRPC_CPP_PLUGIN=ON \
+        -DgRPC_BUILD_GRPC_CSHARP_PLUGIN=OFF \
+        -DgRPC_BUILD_GRPC_NODE_PLUGIN=OFF \
+        -DgRPC_BUILD_GRPC_OBJECTIVE_C_PLUGIN=OFF \
+        -DgRPC_BUILD_GRPC_PHP_PLUGIN=OFF \
+        -DgRPC_BUILD_GRPC_PYTHON_PLUGIN=OFF \
+        -DgRPC_BUILD_GRPC_RUBY_PLUGIN=OFF \
+        ../.. && \
     make -j 4 && \
     make install
 
